--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
@@ -28,6 +30,9 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'com.vladmihalcea:hibernate-types-55:2.19.2'
 
     compileOnly 'org.projectlombok:lombok'
 
