Overrides gradle jar method to create fat jar

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,6 +13,16 @@ plugins {
     id 'java-library'
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "formflow.library.FormFlowProperties"
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 task webjar(type: Jar, dependsOn: "jar") {
     from(fileTree("dist")) {
         into "META-INF/resources"
@@ -35,6 +45,7 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.jetbrains:annotations:23.0.0'
