--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,6 +13,9 @@ plugins {
     id 'java-library'
 }
 
+targetCompatibility = 17
+sourceCompatibility = 17
+
 jar {
     manifest {
         attributes "Main-Class": "formflow.library.ScreenController"
