--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -15,7 +15,7 @@ plugins {
 
 jar {
     manifest {
-        attributes "Main-Class": "formflow.library.FormFlowProperties"
+        attributes "Main-Class": "formflow.library.ScreenController"
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from {
