Try declaring JavaVersion.VERSION_17 in build.gradle

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -15,8 +15,8 @@ plugins {
     id 'java'
 }
 
-targetCompatibility = 17
-sourceCompatibility = 17
+targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_17
 
 jar {
     manifest {
