Adds back in grabbing github variables

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -77,8 +77,8 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/codeforamerica/form-flow")
             credentials {
-                username = props.getProperty("USERNAME")
-                password = props.getProperty("TOKEN")
+                username = project.findProperty("gpr.user") ?: props.getProperty("USERNAME")
+                password = project.findProperty("gpr.key") ?: props.getProperty("TOKEN")
             }
         }
     }
