Fix github action publishing
- Test if commenting out ThymeleafConfiguration makes no difference, since it appears to be the case locally

Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,7 +19,9 @@ targetCompatibility = JavaVersion.VERSION_17
 sourceCompatibility = JavaVersion.VERSION_17
 
 def props = new Properties()
-file(".env").withInputStream { props.load(it) }
+if (file('.env').isFile()) {
+    file(".env").withInputStream { props.load(it) }
+}
 
 jar {
     manifest {
