--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -42,5 +42,5 @@ jobs:
       with:
         arguments: publish
       env:
-        GPR_USER: ${{ github.actor }}
-        GPR_KEY: ${{ secrets.GITHUB_TOKEN }}
+        USERNAME: ${{ github.actor }}
+        TOKEN: ${{ secrets.GITHUB_TOKEN }}
