--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -5,14 +5,17 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: Publish Package to Github & Maven Central
 
 on:
-  workflow_run:
-    workflows: [ "Run tests" ]
-    branches: [ main ]
-    types:
-      - completed
+  push:
+    branches:
+      - 'maven-publish'
+#  workflow_run:
+#    workflows: [ "Run tests" ]
+#    branches: [ main ]
+#    types:
+#      - completed
 
 jobs:
   build:
@@ -34,15 +37,20 @@ jobs:
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
-      # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
-      - name: Publish to GitHub Packages
+      #      - name: Publish to GitHub Packages
+      #        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      #        with:
+      #          arguments: publish
+      #        env:
+      #          USERNAME: ${{ github.actor }}
+      #          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to Maven Central
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: publish
         env:
-          USERNAME: ${{ github.actor }}
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
       - name: Announce on Slack
         if: failure()
         uses: ravsamhq/notify-slack-action@v2
