--- a/build.gradle
+++ b/build.gradle
@@ -85,22 +85,80 @@ test {
 
 publishing {
     repositories {
+//        maven {
+//            name = "GitHubPackages"
+//            url = uri("https://flatDir.pkg.github.com/codeforamerica/form-flow")
+//            credentials {
+//                username = props.getProperty("USERNAME") ?: System.getenv("USERNAME")
+//                password = props.getProperty("TOKEN") ?: System.getenv("TOKEN")
+//            }
+//        }
         maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/codeforamerica/form-flow")
+            name = "MavenCentral"
+            url = "https://s01.oss.sonatype.org/content/repositories/snapshots"
             credentials {
-                username = props.getProperty("USERNAME") ?: System.getenv("USERNAME")
-                password = props.getProperty("TOKEN") ?: System.getenv("TOKEN")
+                username = System.getenv("MAVEN_USERNAME")
+                password = System.getenv("MAVEN_PASSWORD")
             }
         }
     }
     publications {
-        gpr(MavenPublication) {
-            from(components.java)
-            // eventually this should probably be org.codeforamerica.form-flow ...?
-            group = "form-flow"
-            artifactId = "form-flow-library"
-            version = "0.0.1-SNAPSHOT"
+        mavenJava(MavenPublication) {
+            pom {
+                from(components.java)
+                name = "Form Flow Builder"
+                description = "A Java library placed in a Spring Boot app to generate form flows."
+                url = "https://github.com/codeforamerica/form-flow/"
+                group = "org.codeforamerica.platform"
+                artifactId = "form-flow"
+                version = "0.0-SNAPSHOT"
+
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://raw.githubusercontent.com/git/git-scm.com/main/MIT-LICENSE.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'bencalegari'
+                        name = 'Ben Calegari'
+                        email = 'bcalegari@codeforamerica.org'
+                    }
+                    developer {
+                        id = 'cy-cfa'
+                        name = 'Cypress Borg'
+                        email = 'cborg@codeforamerica.org'
+                    }
+                    developer {
+                        id = 'luigi'
+                        name = 'Luigi Ray-Montañez'
+                        email = 'luigi@codeforamerica.org'
+                    }
+                    developer {
+                        id = 'birdprsn'
+                        name = 'Alex Gonzalez'
+                        email = 'agonzalez@codeforamerica.org'
+                    }
+                    developer {
+                        id = ''
+                        name = 'Chibuisi Enyia'
+                        email = 'cenyia@codeforamerica.org'
+                    }
+                    developer {
+                        id = 'bethany'
+                        name = 'Bethany Seeger'
+                        email = 'bseeger@codeforamerica.org'
+                    }
+                }
+            }
         }
+//        gpr(MavenPublication) {
+//            from(components.java)
+//            // eventually this should probably be org.codeforamerica.form-flow ...?
+//            group = "form-flow"
+//            artifactId = "form-flow-library"
+//            version = "0.0.1-SNAPSHOT"
+//        }
     }
 }
