--- a/build.gradle
+++ b/build.gradle
@@ -64,11 +64,10 @@ dependencies {
     implementation 'com.vladmihalcea:hibernate-types-55:2.20.0'
     implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.flywaydb:flyway-core'
-    implementation 'org.slf4j:slf4j-api:2.0.3'
-    implementation 'ch.qos.logback:logback-core:1.4.4'
-    implementation 'io.awspring.cloud:spring-cloud-aws-context:2.3.1'
-    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
-    implementation 'io.awspring.cloud:spring-cloud-aws-autoconfigure:2.3.1'
+//    implementation 'io.awspring.cloud:spring-cloud-aws-context:2.3.1'
+//    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.327'
+//    implementation 'io.awspring.cloud:spring-cloud-aws-autoconfigure:2.3.1'
 
     compileOnly 'org.projectlombok:lombok'
 
