--- a/build.gradle
+++ b/build.gradle
@@ -64,10 +64,9 @@ dependencies {
     implementation 'com.vladmihalcea:hibernate-types-55:2.20.0'
     implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.flywaydb:flyway-core'
-//    implementation 'io.awspring.cloud:spring-cloud-aws-context:2.3.1'
-//    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
+    // TODO do we want to use this thumbnail library? Shiba uses it. --> https://github.com/coobird/thumbnailator
+    implementation 'net.coobird:thumbnailator:0.4.18'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.328'
-//    implementation 'io.awspring.cloud:spring-cloud-aws-autoconfigure:2.3.1'
 
     compileOnly 'org.projectlombok:lombok'
 
