--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.jsoup:jsoup:1.15.3'
+    testImplementation 'com.h2database:h2'
 }
 
 test {
