--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,6 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13.2'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     api 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -64,7 +62,6 @@ dependencies {
     implementation 'com.vladmihalcea:hibernate-types-55:2.20.0'
     implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.flywaydb:flyway-core'
-    // TODO do we want to use this thumbnail library? Shiba uses it. --> https://github.com/coobird/thumbnailator
     implementation 'net.coobird:thumbnailator:0.4.18'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.335'
 
@@ -72,6 +69,18 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+    // Use JUnit test framework.
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.jsoup:jsoup:1.15.3'
+    testImplementation 'com.h2database:h2'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 publishing {
