Publish only after we run tests
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -8,9 +8,11 @@
 name: Gradle Package
 
 on:
-  push:
-    branches:
-      - 'main'
+  workflow_run:
+    workflows: [ "Run tests" ]
+    branches: [ main ]
+    types:
+      - completed
 
 jobs:
   build:
