Update env vars for sonatype library repo access
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Cypress Borg <cborg@codeforamerica.org>
Co-authored-by: Rapi Castillo <rcastillo@codeforamerica.org.

--- a/build.gradle
+++ b/build.gradle
@@ -100,8 +100,8 @@ publishing {
             // see https://issues.sonatype.org/browse/OSSRH-85469
             url = "https://oss.sonatype.org/content/repositories/snapshots"
             credentials {
-                username = localEnv.getProperty("MAVEN_USERNAME")
-                password = localEnv.getProperty("MAVEN_PASSWORD")
+                username = localEnv.getProperty("SONATYPE_USERNAME") ?: System.getenv("SONATYPE_USERNAME")
+                password = localEnv.getProperty("SONATYPE_PASSWORD") ?: System.getenv("SONATYPE_PASSWORD")
             }
         }
     }
