Add Maven publish support (#50)
update the repo to push the jar up to sonatype, moving away from using Github

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Cypress Borg <cborg@codeforamerica.org>
Co-authored-by: Rapi Castillo <rcastillo@codeforamerica.org.
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: spokenbird <agonzalez@codeforamerica.org>

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -5,9 +5,10 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: Publish Package to Github & Maven Central
 
 on:
+  push:
   workflow_run:
     workflows: [ "Run tests" ]
     branches: [ main ]
@@ -34,15 +35,13 @@ jobs:
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
-      # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
-      - name: Publish to GitHub Packages
+      - name: Publish to Maven Central
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: publish
         env:
-          USERNAME: ${{ github.actor }}
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
       - name: Announce on Slack
         if: failure()
         uses: ravsamhq/notify-slack-action@v2
