Update maxFiles check in fileUploader to use maxfiles + 1 (should be able to upload up to and including max files)

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -4,8 +4,8 @@ form-flow:
   aws:
     region: 'us-west-1'
     s3_bucket_name: 'test-form-flow'
-    access_key: bar
-    secret_key: foo
+    access_key: 'bar'
+    secret_key: 'foo'
   uploads:
     accepted-file-types: '.jpeg,.jpg,.png,.pdf,.bmp,.gif,.doc,.docx,.odt,.ods,.odp,.heic'
 spring:
