--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.jsoup:jsoup:1.15.3'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    testImplementation 'org.awaitility:awaitility'
+    testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'com.h2database:h2'
 }
 
