--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.jetbrains:annotations:23.1.0'
     implementation 'com.vladmihalcea:hibernate-types-55:2.21.1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
@@ -83,9 +84,10 @@ dependencies {
     testImplementation 'com.h2database:h2'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
+
 
 publishing {
     repositories {
