--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+src/test/resources/qunit-results.png
 
 ### STS ###
 .apt_generated
