--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.jetbrains:annotations:24.0.0'
     implementation 'com.vladmihalcea:hibernate-types-55:2.21.1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
@@ -77,12 +78,16 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.jsoup:jsoup:1.15.3'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    testImplementation 'org.awaitility:awaitility'
+    testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'com.h2database:h2'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
+
 
 publishing {
     repositories {
