--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -2,7 +2,11 @@ form-flow:
   path: 'flows-config.yaml'
   inputs: 'formflow.library.inputs.'
   uploads:
-    accepted-file-types: '.jpeg,.jpg,.png,.pdf,.bmp,.gif,.doc,.docx,.odt,.ods,.odp,.heic'
+    accepted-file-types: '.jpeg, .fake'
+    max-files: '5'
+    max-file-size: '17'
+    thumbnail-width: '100'
+    thumbnail-height: '50'
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:test-schema-init.sql'
