--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -15,6 +15,8 @@ spring:
   flyway:
     enable: false
     baselineOnMigrate: true
+    placeholders:
+      uuid_function: "random_uuid"
   jpa:
     hibernate:
       ddl-auto: create-drop
