add optional validation parameter and test (currently failing)

--- a/src/test/resources/flows-config/test-validation.yaml
+++ b/src/test/resources/flows-config/test-validation.yaml
@@ -8,6 +8,9 @@ flow:
       - name: pageWithCheckboxSetInput
   pageWithCheckboxSetInput:
     nextScreens:
+      - name: pageWithOptionalValidation
+  pageWithOptionalValidation:
+    nextScreens:
       - name: last
   last:
     nextScreens:
