add mock mvc test for optional validation

--- a/src/test/resources/flows-config/test-inputs.yaml
+++ b/src/test/resources/flows-config/test-inputs.yaml
@@ -6,6 +6,9 @@ flow:
   test:
     nextScreens:
       - name: success
+  pageWithOptionalValidation:
+    nextScreens:
+      - name: success
   success:
     nextScreens:
 subflows:
