WIP, stashing to create zip and state fragments

--- a/src/test/resources/flows-config/test-inputs.yaml
+++ b/src/test/resources/flows-config/test-inputs.yaml
@@ -3,6 +3,9 @@ flow:
   inputs:
     nextScreens:
       - name: test
+  address:
+    nextScreens:
+      - name: test
   test:
     nextScreens:
       - name: success
