install heic library in CI before building gradle
Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - name: Build Gradle
-        run: ./gradlew build
+        run: apt install heif-gdk-pixbuf heif-thumbnailer gimagereader gpicview && ./gradlew build
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
