--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - name: Build Gradle
-        run: sudo apt install heif-gdk-pixbuf heif-thumbnailer gimagereader gpicview && ./gradlew build
+        run: sudo apt update && sudo apt install heif-gdk-pixbuf heif-thumbnailer gimagereader gpicview && ./gradlew build
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
