--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Run tests
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK
@@ -18,7 +18,7 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - name: Build Gradle
-        run: sudo apt update && sudo apt install heif-gdk-pixbuf heif-thumbnailer gimagereader gpicview && ./gradlew build
+        run: ./gradlew build
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
