--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - name: Build Gradle
-        run: ./gradlew build
+        run: ./gradlew clean jar
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
