DO NOT MERGE (yet): Changes file id to UUID versus just an int (#96)
* Changes file id to UUID versus just an int
* Takes out debug stuff
* Fixes tests based on code changes.
* Some cleanup.
* Tries to be more generic
* First pass at getting tests to pass with H2.  Needs to be
reorganized.
* Fixes some UUID issues
* More changes
* Clean up whitespace
* Move application properties into groups

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: lkemperman-cfa <lkemperman@codeforamerica.org>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
-logging:
-  level:
-    root: INFO
-    org.springframework.web: ERROR
+spring:
+  profiles:
+    group:
+      test:
+        - test
+        - form-flow-library-test
