Add test for multiple validation messages on a single input

--- a/src/test/resources/flows-config/test-inputs.yaml
+++ b/src/test/resources/flows-config/test-inputs.yaml
@@ -9,6 +9,9 @@ flow:
   pageWithOptionalValidation:
     nextScreens:
       - name: success
+  pageWithMultipleValidationInput:
+    nextScreens:
+      - name: success
   success:
     nextScreens:
 subflows:
