--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.jsoup:jsoup:1.15.3'
+    // bonigarcia seems to need this version of client5, as of version 5.3.2.
+    // aws-java-sdk-s3 uses version httpclient:4.5.13, so if we see any differences in testing going forward
+    // we should take a look at this dependency and see if it's really testing things correctly and
+    // monitor the dependencies.
+    testImplementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
     testImplementation 'org.awaitility:awaitility'
     testImplementation 'org.seleniumhq.selenium:selenium-java'
