--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'net.coobird:thumbnailator:0.4.19'
     implementation 'org.webjars.npm:dropzone:5.9.3'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.364'
+    implementation 'com.smartystreets.api:smartystreets-java-sdk:3.13.14'
     implementation 'org.apache.pdfbox:pdfbox:2.0.+'
 
     compileOnly 'org.projectlombok:lombok'
@@ -88,6 +89,7 @@ dependencies {
     testImplementation 'org.awaitility:awaitility'
     testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'com.h2database:h2'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
 }
 
 tasks.named('test') {
