WIP implementing AddressValidationService, ValidationRequestFactory, and ValidatedAddress
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>

--- a/src/test/resources/flows-config/test-inputs.yaml
+++ b/src/test/resources/flows-config/test-inputs.yaml
@@ -3,7 +3,7 @@ flow:
   inputs:
     nextScreens:
       - name: test
-  address:
+  testAddressValidation:
     nextScreens:
       - name: test
   test:
