--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -7,6 +7,11 @@ form-flow:
     max-file-size: '17'
     thumbnail-width: '100'
     thumbnail-height: '50'
+  address-validation:
+    smarty:
+      auth_id: "authId"
+      auth_token: "authToken"
+      license: "license"
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:test-schema-init.sql'
