Change smarty properties to always be kebab case
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -9,8 +9,8 @@ form-flow:
     thumbnail-height: '50'
   address-validation:
     smarty:
-      auth_id: "authId"
-      auth_token: "authToken"
+      auth-id: "authId"
+      auth-token: "authToken"
       license: "license"
 spring:
   datasource:
