--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -14,6 +14,12 @@ flow:
       - name: success
   pageWithMultipleValidationInput:
     nextScreens:
+      - name: pageWithDefaultSubmitButton
+  pageWithDefaultSubmitButton:
+    nextScreens:
+      - name: pageWithCustomSubmitButton
+  pageWithCustomSubmitButton:
+    nextScreens:
       - name: success
   success:
     nextScreens:
