Add test for entering an address
Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -5,6 +5,9 @@ flow:
       - name: test
   testAddressValidation:
     nextScreens:
+      - name: testAddressVerification
+  testAddressVerification:
+    nextScreens:
       - name: test
   test:
     nextScreens:
