Adding "beforeDisplayAction" This is derived from the work on PR #150
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/src/test/resources/flows-config/test-before-save-action.yaml
+++ b/src/test/resources/flows-config/test-before-save-action.yaml
@@ -2,7 +2,7 @@ name: testFlow
 actionsPath: formflow.library.submissions.actions
 flow:
   inputs:
-    beforeSave: formflow.library.submissions.actions.FormatDateBeforeSave
+    beforeSaveAction: formflow.library.submissions.actions.FormatDateBeforeSave
     nextScreens:
       - name: subflowEntry
   subflowEntry:
@@ -13,7 +13,7 @@ flow:
     nextScreens:
       - name: next
   next:
-    beforeSave: formflow.library.submissions.actions.CalculateTotalBeforeSave
+    beforeSaveAction: formflow.library.submissions.actions.CalculateTotalBeforeSave
     subflow: income
     nextScreens:
       - name: subflowReview
