WIP - Add global disable for address validation
[#184247553]

Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -8,6 +8,7 @@ form-flow:
     thumbnail-width: '100'
     thumbnail-height: '50'
   address-validation:
+    disable: false
     smarty:
       auth-id: "authId"
       auth-token: "authToken"
