Change submission_id to be a UUID
- Tests now use postgresql

[#184056302]

Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,6 +9,16 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: form-flow-test
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: form-flow-test
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v3
         with:
