--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -16,11 +16,10 @@ form-flow:
     path: 'src/test/resources/pdfs/'
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:test-schema-init.sql'
-    username: sa
-    password: sa
+    url: jdbc:postgresql://localhost:5432/form-flow-test
+    username: form-flow-test
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: create-drop
-  main:
     allow-circular-references: true
