--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.0.1'
     implementation 'com.vladmihalcea:hibernate-types-55:2.21.1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
-    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-core:9.15.2'
     implementation 'net.coobird:thumbnailator:0.4.19'
     implementation 'org.webjars.npm:dropzone:5.9.3'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.364'
@@ -81,7 +81,7 @@ dependencies {
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
     testImplementation 'org.awaitility:awaitility'
     testImplementation 'org.seleniumhq.selenium:selenium-java'
-    testImplementation 'com.h2database:h2'
+    testImplementation 'org.postgresql:postgresql'
     testImplementation 'org.projectlombok:lombok:1.18.26'
 }
 
