--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,4 @@
 spring:
-  profiles:
-    group:
-      test:
-        - test
-        - form-flow-library-test
+  messages:
+    encoding: ISO-8859-1
+    basename: messages, messages-form-flow
