Update README to include @Component on conditions

--- a/src/test/resources/flows-config/test-conditional-navigation.yaml
+++ b/src/test/resources/flows-config/test-conditional-navigation.yaml
@@ -5,11 +5,11 @@ flow:
     nextScreens:
       - name: other
       - name: second
-        condition: formflow.library.submission.conditions.TrueCondition
+        condition: TrueCondition
   second:
     nextScreens:
       - name: other
-        condition: formflow.library.submission.conditions.FalseCondition
+        condition: FalseCondition
       - name: last
   other:
     nextScreens:
