Splits out actions and conditions into their own classes, versus being a part of TemplateManager.

--- a/src/test/resources/flows-config/test-before-display-action.yaml
+++ b/src/test/resources/flows-config/test-before-display-action.yaml
@@ -1,9 +1,8 @@
 name: testFlow
-actionsPath: formflow.library.submissions.actions
 flow:
   inputs:
-    beforeSaveAction: formflow.library.submissions.actions.EncryptSSN
-    beforeDisplayAction: formflow.library.submissions.actions.DecryptSSN
+    beforeSaveAction: EncryptSSN
+    beforeDisplayAction: DecryptSSN
     nextScreens:
       - name: subflowEntry
   subflowEntry:
@@ -14,8 +13,8 @@ flow:
     nextScreens:
       - name: pageWithSSNInput
   pageWithSSNInput:
-    beforeSaveAction: formflow.library.submissions.actions.EncryptSSN
-    beforeDisplayAction: formflow.library.submissions.actions.DecryptSSN
+    beforeSaveAction: EncryptSSN
+    beforeDisplayAction: DecryptSSN
     subflow: householdMembers
     nextScreens:
       - name: subflowReview
