--- a/src/test/resources/flows-config/test-before-save-action.yaml
+++ b/src/test/resources/flows-config/test-before-save-action.yaml
@@ -1,8 +1,7 @@
 name: testFlow
-actionsPath: formflow.library.submissions.actions
 flow:
   inputs:
-    beforeSaveAction: formflow.library.submissions.actions.FormatDateBeforeSave
+    beforeSaveAction: FormatDateBeforeSave
     nextScreens:
       - name: subflowEntry
   subflowEntry:
@@ -13,7 +12,7 @@ flow:
     nextScreens:
       - name: next
   next:
-    beforeSaveAction: formflow.library.submissions.actions.CalculateTotalBeforeSave
+    beforeSaveAction: CalculateTotalBeforeSave
     subflow: income
     nextScreens:
       - name: subflowReview
