Fixes tests. Adds test for non existent condition

--- a/src/test/resources/flows-config/test-conditional-navigation.yaml
+++ b/src/test/resources/flows-config/test-conditional-navigation.yaml
@@ -10,9 +10,14 @@ flow:
       - name: other
         condition: FalseCondition
       - name: last
+  third:
+    nextScreens:
+      - name: first
+      - name: last
   other:
     nextScreens:
       - name: first
+        condition: DoesNotExist
       - name: last
   last:
     nextScreens: null
